sass/index.scss
/* ... */
.visualizer {
    position: absolute;
    width: 283px;
    height: 100%;
    top: -5px;
    z-index: -5000;
    canvas {
        opacity: 0.1;
        width: 100%;
        height: 100%;
    }
}
.oscilloscope {
    width: 50px;
    height: 50px;
    position: absolute;
    transform: rotate(-90deg);
    left: -10px;
    top: 10px;
}
.oscilloscope__wave {
	fill: none;

    stroke: #000000;
    stroke-width: 0.5px;
}


/* BEGIN PAGE/POST SHARED STYLES */
article.page, article.post, article.albumreviews, article.concertreviews, article.weeklypicks, article.event {

    color: hsla(0,0%,0%,0.8);
    max-width: 1500px;
    margin-left: auto;
    margin-right: auto;
    padding-top: 2rem;

    header.entry-header {
        font-size: 1.125rem;
        font-weight: bold;
        line-height: 2.1;
        font-family: 'Judson';
        .meta {
            .entry-title {
                margin-bottom: 0rem;
            }
            text-align: left;
            margin-left: 15rem;
            @media screen and (max-width: $SM) {
                margin-left: 1rem;
            }
        }
    }
    img.cover {
        object-fit: cover;
        max-height: 650px;
        width: 100%;
    }
    div.entry-content {
        font-size: 75%;
        p {
            //hack to avoid min width being hit by float
            &:before {
                content: "";
                width: 175px;
                display: block;
                overflow: hidden;
            }
            max-width: 450px;
            font-size: 1.125rem;

            line-height: 1.3;
            letter-spacing: -.003em;
            padding: 0 0.3rem 0 0.3rem;
            max-width: 400px;

            font-family: 'Judson';

            text-align: left;
            margin-left: 15rem;
            @media screen and (max-width: $SM) {
                margin-left: 1rem;
                margin-right: 1rem;
            }
        }
        iframe.youtube-player {
            margin-left: auto !important;
            margin-right: auto !important;
        }
        figure {
            width: 60% !important;
            margin-left: 15rem;
            @media screen and (max-width: $SM) {
                width: 100% !important;
                margin: 0;
            }
            > figcaption {
                font-size: 90%;
                color: #818a91;
            }
            &.alignnone {
                margin-left: 72px;
                @media screen and (max-width: $SM) {
                    margin: 0;
                }
            }
            &.alignright {
                @media screen and (max-width: $SM) {
                    float: none;
                    clear: both;
                    display: block;
                    margin: 0;
                    width: 100% !important;
                }
            }
            &.alignleft {
                width: inherit;
                margin-left: 13vw;
                @media screen and (max-width: $SM) {
                    float: none;
                    clear: both;
                    display: block;
                    margin: 0;
                    width: 100% !important;
                }
            }
        }
    }

    div.sharedaddy, div.jp-relatedposts {
        max-width: 450px;
        margin: auto !important;
    }

    /* instagram embedded images */
    .instagram-media {
        margin-left: 15rem !important;
        @media screen and (max-width: $SM) {
            margin-left: 0 !important;
        }
        max-width: 600px !important;
        clear: both;
        margin-bottom: 0.5rem !important;
        margin-top: 0.5rem !important;
    }

}

/* JUSTIFY AND CENTER PAGE CONTENT */
article.page {
    padding: 2rem 0 2rem 0;
    div.entry-content {
        margin: auto;
    }
}

article.page.show, article.page.playlist {
    display: block;
    .show {
        h2 {
            font-size: 1.2rem;
            margin: 0.5rem 0;
        }
        border: 0;
        .info {
            .title {
                margin: 0;
                margin-bottom: 0.5rem;
                font-size: 2rem;
            }
            .djs {
                display:block;
                margin-bottom: 0.3rem;
            }
            .times {
                color: #818a91;
                display: block;
            }
            .description {
                margin: 0;
                margin-top: 0.5rem;
            }
        }
        .other-info {
            border-left: 1px solid #eceeef;
        }
        .playlist-date {
            display: block;
            margin-bottom: 0.3rem;
            color: #818a91;
        }
        .songs, .playlists {
            list-style: none;
            padding: 0;
            margin: 0;
            .timestamp {
                color: #818a91;
                font-size: 0.6rem;
            }
            .artist {
                &:before {
                    content: ' by ';
                    color: #818a91;
                }
            }
        }
    }
}
.cya-styles {
    text-decoration: none;
    color: inherit;
    &:hover {
        text-decoration: none;
    }
    &:visited {
        color: inherit;
    }
    &:active {
        text-decoration: none;
    }
    &:focus {
        text-decoration: none;
    }
}
/* ... */

